Fixed missing border line issue by adding border-bottom to <h1>; working on tablet and desktop styles.

--- a/css/main.css
+++ b/css/main.css
@@ -58,14 +58,11 @@ header {
 header h1 {
 	margin: 0;
 	padding: 30px 0px 20px; 
+	border-bottom: 3px solid #77a466;
 }
 
 header h1 span {
 	color: #77a466;
-}
-
-div .header-divider {
-	border-bottom: 6px solid #77a466;
 }
 
 header nav {
